modules/gdscript/tests/scripts/runtime/errors/typed_array_assign_wrong_to_typed.gd
class Foo: pass
class Bar extends Foo: pass
class Baz extends Foo: pass

func test():
	var _typed: Array[Bar] = [Baz.new() as Foo]
	print('not ok')
